k8s/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: metrics
spec:
  selector:
    app: grafana
  ports:
    - name: grafana-http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
